修改关闭广告逻辑

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -42,7 +42,7 @@
     },
     "quickapp" : {},
     "mp-weixin" : {
-        "appid" : "",
+        "appid" : "wxe130f3b5af8e4e14",
         "setting" : {
             "urlCheck" : false,
             "es6" : true
