--- a/src/manifest.json
+++ b/src/manifest.json
@@ -49,7 +49,8 @@
         },
         "usingComponents" : true,
         "lazyCodeLoading" : "requiredComponents",
-        "darkmode" : true
+        "darkmode" : true,
+        "requiredBackgroundModes": ["audio"]
     },
     "mp-alipay" : {
         "usingComponents" : true
